--- a/src/main/webapp/index2.html
+++ b/src/main/webapp/index2.html
@@ -11,17 +11,17 @@
 
     <title>Euromonitor International - Log in</title>
 
-    <link href="/Portal/bundles/kendo/kendo?v=5ZV05OpiuB2a5uKlM474fzBbtEHIHw1FvsRjmJl0O4c1" rel="stylesheet"/>
+    <link href="http://www.portal.euromonitor.com/Portal/bundles/kendo/kendo?v=5ZV05OpiuB2a5uKlM474fzBbtEHIHw1FvsRjmJl0O4c1" rel="stylesheet"/>
 
-    <link href="/Portal/bundles/css?v=JHtx6qsWsPMKNCfUI6xZCfwvld5KCGpl73S9qUtMQpI1" rel="stylesheet"/>
+    <link href="http://www.portal.euromonitor.com/Portal/bundles/css?v=JHtx6qsWsPMKNCfUI6xZCfwvld5KCGpl73S9qUtMQpI1" rel="stylesheet"/>
 
-    <link href="/Portal/bundles/less/less?v=K08dCMxJ8lWyxB2MYlCRACsqq62LKmApgtJU2Iq5lFE1" rel="stylesheet"/>
+    <link href="http://www.portal.euromonitor.com/Portal/bundles/less/less?v=K08dCMxJ8lWyxB2MYlCRACsqq62LKmApgtJU2Iq5lFE1" rel="stylesheet"/>
 </head>
 <body class="top" id="loginPage">
     <div id="siteWrap">
         <div id="mast">
             <a href="#" class="searchblock">
-                <img galabel="Home" gacategory="TopBanner" alt="Passport - Home" title="Passport - Home" cssclass="searchblock" id="PassportLogoImage" src="/Portal/Content/images/em-passport-logo.png" />
+                <img galabel="Home" gacategory="TopBanner" alt="Passport - Home" title="Passport - Home" cssclass="searchblock" id="PassportLogoImage" src="http://www.portal.euromonitor.com/Portal/Content/images/em-passport-logo.png" />
             </a>
             <div class="mainNavWrap">
                 <ul class="mainNav loginNav">
