--- a/src/main/webapp/index2.html
+++ b/src/main/webapp/index2.html
@@ -11,11 +11,11 @@
 
     <title>Euromonitor International - Log in</title>
 
-    <link href="http://www.portal.euromonitor.com/Portal/bundles/kendo/kendo?v=5ZV05OpiuB2a5uKlM474fzBbtEHIHw1FvsRjmJl0O4c1" rel="stylesheet"/>
+    <link href="style/1.css" rel="stylesheet"/>
 
-    <link href="http://www.portal.euromonitor.com//Portal/bundles/css?v=JHtx6qsWsPMKNCfUI6xZCfwvld5KCGpl73S9qUtMQpI1" rel="stylesheet"/>
+    <link href="style/2.css" rel="stylesheet"/>
 
-    <link href="http://www.portal.euromonitor.com//Portal/bundles/less/less?v=K08dCMxJ8lWyxB2MYlCRACsqq62LKmApgtJU2Iq5lFE1" rel="stylesheet"/>
+    <link href="style/3.css" rel="stylesheet"/>
 
 </head>
 <body class="top" id="loginPage">
