--- a/src/main/webapp/discovery.html
+++ b/src/main/webapp/discovery.html
@@ -1,19 +1,18 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta http-equiv="Expires" content="0" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Cache-Control" content="no-cache" />
 <title>Passport - Institution Login</title>
 <link rel="stylesheet" href="style/4.css" />
-<link rel="icon" href="/AthensGateway/Images/favicon.png" type="image/x-icon" />
+<link rel="icon" href="http://www.portal.euromonitor.com/AthensGateway/Images/favicon.png" type="image/x-icon" />
 </head>
 <body>
 <div class="site-wrapper">
 <div id="header">
-<div class="logo"><img src="/AthensGateway/Images/logo.png" /></div>
+<div class="logo"><img src="http://www.portal.euromonitor.com/AthensGateway/Images/logo.png" /></div>
 <div class="page-heading">Login</div>
 </div>
 <div id="main">
@@ -104,7 +103,7 @@ to log in via OpenAthens MD
 <div class="footer-push"></div>
 </div>
 <div id="footer">
-<div class="footer-logo"><a href="http://www.euromonitor.com" target="_blank"><img src="/AthensGateway/Images/emi-logo.png" /></a></div>
+<div class="footer-logo"><a href="http://www.euromonitor.com" target="_blank"><img src="http://www.portal.euromonitor.com/AthensGateway/Images/emi-logo.png" /></a></div>
 <ul class="footer-links">
 <li><a GAAction="Privacy" GACategory="Policy" GALabel="Privacy Policy" href="/AthensGateway/Policy/Privacy" target="_blank">Privacy Policy</a> | </li>
 <li><a GAAction="Cookie" GACategory="Policy" GALabel="Cookie Policy" href="/AthensGateway/Policy/Cookie" target="_blank">Cookie Policy</a> | </li>
