--- a/src/main/webapp/index2.html
+++ b/src/main/webapp/index2.html
@@ -121,7 +121,8 @@
                             </div>
                             
                             <div class="row altLogin">
-                                <a GAAction="AthensLogin" GACategory="Athens" GALabel="Athens / UK Institution Log In" href="/portal/athens/athenslogin">Athens / UK Institution Log In</a>
+                                <a href="#">Athens / UK Institution Log In</a>&nbsp&nbsp
+                                <a href="federation.jsp">Federated Customer Log In</a>
                             </div>
 
                             <div class="row arrivingFrom">
