--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -30,7 +30,7 @@ var oktaSignIn = new OktaSignIn({
       'phone'
     ]
   },
-  idpDisplay: 'PRIMARY',
+  idpDisplay: 'SECONDARY',
   idps: [{
     'type': 'FACEBOOK',
     'id': '0oa746sj5iiUuvcIH0h7'
