--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -12,6 +12,7 @@
 		
 var oktaSignIn = new OktaSignIn({
   baseUrl: 'https://platformdemo.oktapreview.com',
+  logo: 'images/emirates.png'
   features: {
     rememberDevice: false,
   },
