--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -12,7 +12,7 @@
 		
 var oktaSignIn = new OktaSignIn({
   baseUrl: 'https://platformdemo.oktapreview.com',
-  logo: 'https://platformdemo.oktapreview.com/images/emirates.png'
+  logo: 'https://platformdemo.herokuapp.com/images/emirates.png'
   features: {
     rememberDevice: false,
   },
