--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -32,8 +32,14 @@ var oktaSignIn = new OktaSignIn({
     ]
   },
   idpDisplay: 'SECONDARY',
-  idps: [{
+idps: [{
     'type': 'FACEBOOK',
+    'id': '0oa746sj5iiUuvcIH0h7'
+  }, {
+    'type': 'GOOGLE',
+    'id': '0oa746sj5iiUuvcIH0h7'
+  }, {
+    'type': 'LINKEDIN',
     'id': '0oa746sj5iiUuvcIH0h7'
   }]
 });
