--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -17,8 +17,8 @@ var oktaSignIn = new OktaSignIn({
     rememberDevice: false,
   },
   // OIDC options
-  clientId: 'GHtf9iJdr60A9IYrR0jw',
-  redirectUri: 'https://acme.com/oauth2/callback/home',
+  clientId: 'CbrltpZj8j0e13L99Y4P',
+  redirectUri: 'https://platformdemo.herokuapp.com/oauth2/callback/home',
   authScheme: 'OAUTH2',
   authParams: {
     responseType: 'id_token',
