--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -21,6 +21,7 @@ var oktaSignIn = new OktaSignIn({
   redirectUri: 'https://platformdemo.herokuapp.com/oauth2/callback/home/oauth_proc.jsp',
   authScheme: 'OAUTH2',
   authParams: {
+    display: 'page',
     responseType: 'id_token',
     responseMode: 'okta_post_message',
     scope: [
