--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -18,7 +18,7 @@ var oktaSignIn = new OktaSignIn({
   },
   // OIDC options
   clientId: 'CbrltpZj8j0e13L99Y4P',
-  redirectUri: 'https://platformdemo.herokuapp.com/loginwiget.html',
+  redirectUri: 'https://platformdemo.herokuapp.com/loginwidget.html',
   authScheme: 'OAUTH2',
   authParams: {
     display: 'page',
