--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -21,9 +21,9 @@ var oktaSignIn = new OktaSignIn({
   redirectUri: 'https://platformdemo.herokuapp.com/loginwidget.html',
   authScheme: 'OAUTH2',
   authParams: {
-    display: 'page',
+    display: 'none',
     responseType: 'id_token',
-    responseMode: 'okta_post_message',
+    responseMode: 'form_post',
     scope: [
       'openid',
       'email',
