--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -18,12 +18,12 @@ var oktaSignIn = new OktaSignIn({
   },
   // OIDC options
   clientId: 'CbrltpZj8j0e13L99Y4P',
-  redirectUri: 'https://platformdemo.herokuapp.com/loginwidget.html',
+  redirectUri: 'https://platformdemo.herokuapp.com/oauth2/callback/home/oauth_proc.jsp',
   authScheme: 'OAUTH2',
   authParams: {
     display: 'none',
     responseType: 'id_token',
-    responseMode: 'form_post',
+    responseMode: 'okta_post_message',
     scope: [
       'openid',
       'email',
