--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -49,4 +49,5 @@ idps: [{
 		  }
 		);
 	</script>
+<a href="https://platformdemo.oktapreview.com/oauth2/v1/authorize?client_id=CbrltpZj8j0e13L99Y4P&redirect_uri=https%3A%2F%2Fplatformdemo.herokuapp.com%2Foauth2%2Fcallback%2Fhome%2Foauth_proc.jsp&response_type=id_token&response_mode=okta_post_message&state=U3oPgai9oXAfLhP0o04sUiqM4MMuW8KJy4Haxil37p1WtTWyudSR86GSFbNW9GsD&nonce=5oMNqKp2kCt3fC4hcXNYHrUEh7eoG1109znN2dGsReuntquPdpuSI8tOnQ33W8Jv&display=popup&idp=0oa746sj5iiUuvcIH0h7&scope=openid%20email%20profile">TEST</a>
 </body>
