--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -33,22 +33,19 @@ var oktaSignIn = new OktaSignIn({
 idps: [{
     'type': 'FACEBOOK',
     'id': '0oa746sj5iiUuvcIH0h7'
+  }, {
+    'type': 'GOOGLE',
+    'id': '0oa746sj5iiUuvcIH0h7'
+  }, {
+    'type': 'LINKEDIN',
+    'id': '0oa746sj5iiUuvcIH0h7'
   }]
 });
-
-oktaSignIn.renderEl({
-    el: '#sign-in-container',
-  },
-  function (res) {
-    if (res.status === 'SUCCESS') {
-      // Success callback
-      res.session.setCookieAndRedirect('https://acme.com/home');
-    }
-  },
-  function (err) {
-    // Error callback
-    alert(err.message);
-  });
+		oktaSignIn.renderEl(
+		  { el: '#okta-login-container' },
+		  function (res) {
+		    if (res.status === 'SUCCESS') { res.session.setCookieAndRedirect('https://platformdemo.oktapreview.com'); }
+		  }
 
 </script>
 </body>
