--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -22,7 +22,7 @@ var oktaSignIn = new OktaSignIn({
   authScheme: 'OAUTH2',
   authParams: {
     responseType: 'id_token',
-    responseMode: 'form_post',
+    responseMode: 'okta_post_message',
     scope: [
       'openid',
       'email',
