--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -44,7 +44,7 @@ idps: [{
 		oktaSignIn.renderEl(
 		  { el: '#okta-login-container' },
 		  function (res) {
-			window.alert(res.id_token);
+			window.alert(res.idToken);
 		  }
 		);
 	</script>
