--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -45,7 +45,7 @@ idps: [{
 		  { el: '#okta-login-container' },
 		  function (res) {
 			
-			window.alert("Social Authentication Successful\nOpenID Id Token created:\n" + res.idToken");
+			window.alert("Social Authentication Successful\nOpenID ID Token\n" + res.idToken");
 		  }
 		);
 	</script>
