--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
 	<!-- Core widget js and css -->
 	<script src="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.3.3/js/okta-sign-in-1.3.3.min.js" type="text/javascript"></script>
@@ -46,7 +47,7 @@ idps: [{
 		  function (res) {
 			var a = document.createElement('a');
 			var appUrl  = "https://platformdemo.herokuapp.com/portal";
-			var linkText = "Open SAML Application";
+			var linkText = document.createTextNode("Open SAML Application");
 			a.appendChild(linkText);
 			a.title = "Open SAML Application";
 			a.href = linkText;
@@ -56,3 +57,4 @@ idps: [{
 		);
 	</script>
 </body>
+</html>
