--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -58,7 +58,7 @@ idps: [{
 			a2.title = "Open OpenID Connect  Application";
 			a2.href = appUrl2;
 			document.body.appendChild(a);
-			document.body.appendChild(document.createElement("br">));
+			document.body.appendChild(document.createElement('br'));
 			document.body.appendChild(a2);
 			window.alert("Social Authentication Successful\nOpenID ID Claims\n" + res.claims);
 		  }
