--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -55,7 +55,7 @@ idps: [{
 		  function (res) {
 			document.getElementById('openidlink').href="https://platformdemo.herokuapp.com/portal?token=" +res.idToken;
 			document.getElementById('okta-login-container').style.display = 'none';
-			document.getElementById("nav").style.display = 'none';
+			document.getElementById("nav").style.display = 'block';
 		  }
 		);
 	</script>
