--- a/src/main/webapp/loginwidget_nojit.html
+++ b/src/main/webapp/loginwidget_nojit.html
@@ -26,8 +26,8 @@ var oktaSignIn = new OktaSignIn({
     rememberDevice: false,
   },
   // OIDC options
-  clientId: 'CbrltpZj8j0e13L99Y4P',
-  redirectUri: 'https://platformdemo.herokuapp.com/loginwidget.html',
+  clientId: '6PEfpeGFgpH7zFIMpL2F',
+  redirectUri: 'https://platformdemo.herokuapp.com/loginwidget_nojit.html',
   authScheme: 'OAUTH2',
   authParams: {
     responseType: 'id_token',
@@ -41,14 +41,9 @@ var oktaSignIn = new OktaSignIn({
   idpDisplay: 'SECONDARY',
 idps: [{
     'type': 'FACEBOOK',
-    'id': '0oa746sj5iiUuvcIH0h7'
-  }, {
-    'type': 'GOOGLE',
-    'id': '0oa746sj5iiUuvcIH0h7'
-  }, {
-    'type': 'LINKEDIN',
-    'id': '0oa746sj5iiUuvcIH0h7'
-  }]
+    'id': '0oa76og3v20fekxLj0h7'
+ }
+  ]
 });
 		oktaSignIn.renderEl(
 		  { el: '#okta-login-container' },
