--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -36,6 +36,7 @@ var oktaSignIn = new OktaSignIn({
       'openid',
       'email',
       'profile',
+      'groups'
     ]
   },
   idpDisplay: 'SECONDARY',
