--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -37,6 +37,7 @@ var oktaSignIn = new OktaSignIn({
       'email',
       'profile',
       'groups'
+      'custom1'
     ]
   },
   idpDisplay: 'SECONDARY',
