--- a/src/main/webapp/loginwidget3.html
+++ b/src/main/webapp/loginwidget3.html
@@ -1,37 +1,21 @@
-<!DOCTYPE html>
-<head>
+head>
 	<!-- Core widget js and css -->
-	<script src="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.3.3/js/okta-sign-in-1.3.3.min.js" type="text/javascript"></script>
-	<link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.3.3/css/okta-sign-in-1.3.3.min.css" type="text/css" rel="stylesheet">
+	<script src="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.4.0/js/okta-sign-in.min.js" type="text/javascript"></script>
+	<link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.4.0/css/okta-sign-in.min.css" type="text/css" rel="stylesheet">
 	<!-- Customizable css theme options. Link your own customized copy of this file or override styles in-line -->
-	<link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.3.3/css/okta-theme-1.3.3.css" type="text/css" rel="stylesheet">
+	<link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.4.0/css/okta-theme.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 	<div id="okta-login-container"></div>
-	<div id="nav">
-		<h3>Authentication Successful</h4>
-		<p><a href="https://platformdemo.oktapreview.com/home/platformdemo_portal_1/0oa769mcv2rZbkc260h7/aln769mh75K0laQNB0h7">Open SAML Application</a></p>
-		<p><a id="openidlink" href="https://platformdemo.herokuapp.com/portal?token=">Open OpenID Connect Application</a></p>
-	</div>
-	<script type="text/javascript">
-		document.getElementById("nav").style.display = 'none';
-	</script>
 	<script type="text/javascript">
 		var baseUrl = 'https://platformdemo.oktapreview.com';
+		var oktaSignIn = new OktaSignIn({baseUrl: baseUrl});
 		
-var oktaSignIn = new OktaSignIn({
-  baseUrl: 'https://platformdemo.oktapreview.com',
-  features: {
-    rememberDevice: false,
-});
 		oktaSignIn.renderEl(
 		  { el: '#okta-login-container' },
 		  function (res) {
-			document.getElementById('openidlink').href="https://platformdemo.herokuapp.com/portal?token=" +res.idToken;
-			document.getElementById('okta-login-container').style.display = 'none';
-			document.getElementById("nav").style.display = 'block';
+		    if (res.status === 'SUCCESS') { res.session.setCookieAndRedirect('https://platformdemo.oktapreview.com'); }
 		  }
 		);
 	</script>
 </body>
-</html>
