--- a/src/main/webapp/meapi.html
+++ b/src/main/webapp/meapi.html
@@ -15,6 +15,7 @@ if ("withCredentials" in xhr) {
     };
     xhr.open('GET', baseUrl + '/api/v1/users/me', true);
     xhr.withCredentials = true;
+   xhr.setRequestHeader("Accept","application/json");
     xhr.send();
     alert("CORS success")
 } else {
