--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -21,6 +21,7 @@
 		
 var oktaSignIn = new OktaSignIn({
   baseUrl: 'https://platformdemo.oktapreview.com',
+logo: 'images/engie-logo.png'
   features: {
     rememberDevice: false,
   },
