--- a/src/main/webapp/loginwidget_full.html
+++ b/src/main/webapp/loginwidget_full.html
@@ -38,7 +38,18 @@ logo: 'images/engie-logo.png',
       'profile',
       'groups'
     ]
-  }
+  },
+  idpDisplay: 'SECONDARY',
+idps: [{
+    'type': 'FACEBOOK',
+    'id': '0oa746sj5iiUuvcIH0h7'
+  }, {
+    'type': 'GOOGLE',
+    'id': '0oa746sj5iiUuvcIH0h7'
+  }, {
+    'type': 'LINKEDIN',
+    'id': '0oa746sj5iiUuvcIH0h7'
+  }]
 });
 		oktaSignIn.renderEl(
 		  { el: '#okta-login-container' },
