--- a/src/main/webapp/loginwidget_nojit.html
+++ b/src/main/webapp/loginwidget_nojit.html
@@ -7,7 +7,7 @@
 	<link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.3.3/css/okta-theme-1.3.3.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<img alt="Emirates - Home" title="Emirates - Home" src="images/emirates.png" />
+<img alt="Engie - Home" title="Engie - Home" src="images/engie.png" />
 	<div id="okta-login-container"></div>
 	<div id="nav">
 		<h3>Authentication Successful</h4>
