--- a/src/main/webapp/loginwidget.html
+++ b/src/main/webapp/loginwidget.html
@@ -9,6 +9,7 @@
 <body>
 	<div id="okta-login-container"></div>
 	<div id="nav">
+		<img src="images/engie-logo.png" title="Engie" style="width:200px;height:70px" />
 		<h3>Authentication Successful</h4>
 		<p><a href="https://platformdemo.oktapreview.com/home/platformdemo_portal_1/0oa769mcv2rZbkc260h7/aln769mh75K0laQNB0h7">Open SAML Application</a></p>
 		<p><a id="openidlink" href="https://platformdemo.herokuapp.com/portal?token=">Open OpenID Connect Application</a></p>
