--- a/src/main/webapp/nofromuri.html
+++ b/src/main/webapp/nofromuri.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<h3>This page should no be reached. login page required a fromURI</h3>
+<h3>This page should not be reached. login page required a fromURI</h3>
 
 </body>
 </html>
